fix: layout issues

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,5 +3,6 @@
 /* stylelint-disable-next-line selector-id-pattern */
 body, html, #__nuxt {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 }
+
